force-app/main/default/objects/Account/fields/Business_Link_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Link_Enrollment_Date__c</fullName>
    <description>Enrollment Dates for the Business Link Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Link Enrollment Date</label>
    <type>Date</type>
</CustomField>