force-app/main/default/objects/Account/fields/Card_Product_FBC_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Card_Product_FBC_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card Product FBC Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>