force-app/main/default/objects/Account/fields/CEO_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CEO First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>