force-app/main/default/objects/Account/fields/CEO_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CEO Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>