force-app/main/default/objects/Account/fields/CEO_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>CEO_Middle_Initial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CEO Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>