force-app/main/default/objects/Account/fields/Client_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Rating__c</fullName>
    <label>Client Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Client</fullName>
            </value>
            <value>
                <fullName>B Client</fullName>
            </value>
            <value>
                <fullName>C Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>