force-app/main/default/objects/Account/fields/Cloudingo_Merged_Details__c.field-meta.xml
<CustomField>
    <fullName>Cloudingo_Merged_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cloudingo Merged Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>