force-app/main/default/objects/Account/fields/COI_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>COI_Lead_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is used to support the COI referral hierarchy.</description>
    <label>COI Source</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>