force-app/main/default/objects/Account/fields/COI_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>COI_Source_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COI Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>