force-app/main/default/objects/Account/fields/Colorado_Top_Prospects__c.field-meta.xml
<CustomField>
    <fullName>Colorado_Top_Prospects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colorado Top Prospects</label>
    <type>Checkbox</type>
</CustomField>