force-app/main/default/objects/Account/fields/Commercial_Card_RM__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Card_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Card RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers6</relationshipName>
    <type>Lookup</type>
</CustomField>