force-app/main/default/objects/Account/fields/Commercial_Lending_RM__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Lending_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Lending RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers3</relationshipName>
    <type>Lookup</type>
</CustomField>