force-app/main/default/objects/Account/fields/Commercial_RM_is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Commercial_RM_is_Inactive__c</fullName>
    <formula>IF( Commercial_Lending_RM__r.IsActive = False, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial RM is Inactive</label>
    <type>Checkbox</type>
</CustomField>