force-app/main/default/objects/Account/fields/Comp_Package_Code__c.field-meta.xml
<CustomField>
    <fullName>Comp_Package_Code__c</fullName>
    <formula>IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;a&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;b&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;c&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;d&#39;, &#39;A&#39;, 
IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;e&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;1&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;f&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;2&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;2&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;a&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;2&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;b&#39;, &#39;A&#39;, 
IF(TEXT(Vertical__c) = &#39;3&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;&#39;, &#39;A&#39;, 
IF(TEXT(Vertical__c) = &#39;3&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;a&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;3&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;b&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;3&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;c&#39;, &#39;C&#39;, 
IF(TEXT(Vertical__c) = &#39;3&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;d&#39;, &#39;A&#39;, 
IF(TEXT(Vertical__c) = &#39;4&#39; &amp;&amp; TEXT(Sub_vertical__c) = &#39;&#39;, &#39;A&#39;, 
&#39;Please choose valid Vertical and Sub vertical combination.&#39;))))))))))))))))</formula>
    <label>Comp Package/Code</label>
    <type>Text</type>
</CustomField>