force-app/main/default/objects/Account/fields/Comp_Package_Code_Contract__c.field-meta.xml
<CustomField>
    <fullName>Comp_Package_Code_Contract__c</fullName>
    <description>Contracted Compensation Package from Gemalto (Read Only)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comp Contracted</label>
    <length>1</length>
    <type>Text</type>
</CustomField>