force-app/main/default/objects/Account/fields/Compliance_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Deactivation_Date__c</fullName>
    <description>Track the date a dealer is deactivated for repeat DNA&#39;s reported</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Track the date a dealer is deactivated for repeat DNA&#39;s reported</inlineHelpText>
    <label>Compliance Deactivation Date</label>
    <type>Date</type>
</CustomField>