force-app/main/default/objects/Account/fields/Compliance_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reactivation_Date__c</fullName>
    <description>Track the date a dealer is reactivated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Track the date a dealer is reactivated</inlineHelpText>
    <label>Compliance Reactivation Date</label>
    <type>Date</type>
</CustomField>