force-app/main/default/objects/Account/fields/Contract_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Execution Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>