force-app/main/default/objects/Account/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Expiration Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>