force-app/main/default/objects/Account/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Term</label>
    <length>6</length>
    <type>Text</type>
</CustomField>