force-app/main/default/objects/Account/fields/Count_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities__c</fullName>
    <label>Count of Opportunities</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>