force-app/main/default/objects/Account/fields/CTS_Officer__c.field-meta.xml
<CustomField>
    <fullName>CTS_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTS Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers4</relationshipName>
    <type>Lookup</type>
</CustomField>