force-app/main/default/objects/Account/fields/Current_Bank__c.field-meta.xml
<CustomField>
    <fullName>Current_Bank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>