force-app/main/default/objects/Account/fields/Current_CTS_Global_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Current_CTS_Global_Relationship__c</fullName>
    <label>Current CTS Global Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect – Low</fullName>
            </value>
            <value>
                <fullName>Prospect – High</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>