force-app/main/default/objects/Account/fields/Current_FNTS__c.field-meta.xml
<CustomField>
    <fullName>Current_FNTS__c</fullName>
    <inlineHelpText>For FNTS only, this is what FNTS considers this account/company.  A customer or a prospect</inlineHelpText>
    <label>Current FNTS Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect-Low</fullName>
                <default>true</default>
                <label>Prospect-Low</label>
            </value>
            <value>
                <fullName>Prospect-Medium</fullName>
            </value>
            <value>
                <fullName>Prospect-High</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>