force-app/main/default/objects/Account/fields/Current_Lauritzen_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Current_Lauritzen_Relationship__c</fullName>
    <inlineHelpText>Is this Lauritzen account an existing customer or a prospect.</inlineHelpText>
    <label>Current Lauritzen Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect-Low</fullName>
                <default>true</default>
                <label>Prospect-Low</label>
            </value>
            <value>
                <fullName>Prospect-Medium</fullName>
            </value>
            <value>
                <fullName>Prospect-High</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>