force-app/main/default/objects/Account/fields/Current_Wealth_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_Wealth_Account__c</fullName>
    <inlineHelpText>Is this Wealth account an existing customer or a prospect</inlineHelpText>
    <label>Current Wealth Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect-Low</fullName>
                <default>true</default>
                <label>Prospect-Low</label>
            </value>
            <value>
                <fullName>Prospect-Medium</fullName>
            </value>
            <value>
                <fullName>Prospect-High</fullName>
            </value>
            <value>
                <fullName>Existing Customer - High</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Med</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>