force-app/main/default/objects/Account/fields/Customer_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Customer_Cost_Center__c</fullName>
    <description>Used to capture the Customer&#39;s cost center from Hogan.  This field will not be displayed on page layouts but will be used to allow Retail to separate calling list by branch</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>