force-app/main/default/objects/Account/fields/Customer_Vintage_Image__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vintage_Image__c</fullName>
    <formula>IF( 
    And( Customer_Years_with_Bank__c &gt;0,  Customer_Years_with_Bank__c &lt;4),
        
  IMAGE(&quot;/servlet/servlet.FileDownload?file=0151g000000EKmB&quot;, &quot;1-3 Years&quot;,65,65),
  IMAGE(&quot;/img/s.gif&quot;, &quot;N/A&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Vintage Image</label>
    <type>Text</type>
</CustomField>