force-app/main/default/objects/Account/fields/Customer_Years_with_Bank__c.field-meta.xml
<CustomField>
    <fullName>Customer_Years_with_Bank__c</fullName>
    <formula>IF( NOT( ISBLANK( Vintage_Date__c ) ) ,
  IF( DATE( 2000 , MONTH( Vintage_Date__c ) , DAY( Vintage_Date__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Vintage_Date__c ),
     YEAR (Today()) - YEAR ( Vintage_Date__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Years with Bank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>