force-app/main/default/objects/Account/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DBA Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>