force-app/main/default/objects/Account/fields/Dealer_Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Status_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Status Effective Date</label>
    <type>Date</type>
</CustomField>