force-app/main/default/objects/Account/fields/Dealership_Status__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Status__c</fullName>
    <label>Dealership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed by Partner</fullName>
            </value>
            <value>
                <fullName>Closed by Issuer (FNBO)</fullName>
            </value>
            <value>
                <fullName>Buyer of Sold Dealership</fullName>
            </value>
            <value>
                <fullName>Sold to a New Owner</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>