force-app/main/default/objects/Account/fields/DIAS_Code__c.field-meta.xml
<CustomField>
    <fullName>DIAS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DIAS Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>