force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Don&#39;t contact the client in any way.  No mail, no phone, no email.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>