force-app/main/default/objects/Account/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This client/account doesn&#39;t want to receive standard marketing mail from us.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>