force-app/main/default/objects/Account/fields/Domestic_Ultimate_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Business_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domestic Ultimate Business Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>