force-app/main/default/objects/Account/fields/Domestic_Ultimate_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_DUNS_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domestic Ultimate DUNS Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>