force-app/main/default/objects/Account/fields/ERM_Accounting_Software__c.field-meta.xml
<CustomField>
    <fullName>ERM_Accounting_Software__c</fullName>
    <label>ERM Accounting Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Zero</fullName>
            </value>
            <value>
                <fullName>Sage Intacct</fullName>
            </value>
            <value>
                <fullName>Oracle Netsuite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>