force-app/main/default/objects/Account/fields/Est_60_Day_Spend__c.field-meta.xml
<CustomField>
    <fullName>Est_60_Day_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Est 60 Day Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>