force-app/main/default/objects/Account/fields/eStatement_Indicator__c.field-meta.xml
<CustomField>
    <fullName>eStatement_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eStatement Indicator</label>
    <type>Checkbox</type>
</CustomField>