force-app/main/default/objects/Account/fields/Executed_Agreement_Received_date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Agreement_Received_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executed Agreement Received Date</label>
    <type>Date</type>
</CustomField>