force-app/main/default/objects/Account/fields/Existing_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Company_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Company ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>