force-app/main/default/objects/Account/fields/Final_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Deactivation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Deactivation Date</label>
    <type>Date</type>
</CustomField>