force-app/main/default/objects/Account/fields/First_at_Work_RM__c.field-meta.xml
<CustomField>
    <fullName>First_at_Work_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First at Work RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomersNMfN</relationshipName>
    <type>Lookup</type>
</CustomField>