force-app/main/default/objects/Account/fields/First_Bankcard_Affinity_RM__c.field-meta.xml
<CustomField>
    <fullName>First_Bankcard_Affinity_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Bankcard Affinity RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers8</relationshipName>
    <type>Lookup</type>
</CustomField>