force-app/main/default/objects/Account/fields/First_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Deactivation_Date__c</fullName>
    <description>Date of first DNA offense by Chrysler dealership</description>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Offense Deactiviation Date</label>
    <type>Date</type>
</CustomField>