force-app/main/default/objects/Account/fields/First_Line_Override__c.field-meta.xml
<CustomField>
    <fullName>First_Line_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to take ownership of and create your own first line addressee.</inlineHelpText>
    <label>First Line Override</label>
    <type>Checkbox</type>
</CustomField>