force-app/main/default/objects/Account/fields/First_Offense__c.field-meta.xml
<CustomField>
    <fullName>First_Offense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First DNA Offense by Chrysler Dealership</description>
    <label>First Offense</label>
    <type>Checkbox</type>
</CustomField>