force-app/main/default/objects/Account/fields/FNB_System_of_record_id__c.field-meta.xml
<CustomField>
    <fullName>FNB_System_of_record_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>FNB System of Record ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>