force-app/main/default/objects/Account/fields/FNBO_Agreement__c.field-meta.xml
<CustomField>
    <fullName>FNBO_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FNBO Agreement</label>
    <type>Checkbox</type>
</CustomField>