force-app/main/default/objects/Account/fields/Formal_Addressee__c.field-meta.xml
<CustomField>
    <fullName>Formal_Addressee__c</fullName>
    <description>This field shows what will be displayed on things like envelopes. It is a formal format.</description>
    <formula>IF(TEXT(Salutation) &lt;&gt; &quot;&quot;, TEXT(Salutation)  &amp;  &quot; &quot; &amp; LastName,  FirstName  &amp;  &quot; &quot; &amp; LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is what shows up on things like envelopes.</inlineHelpText>
    <label>Formal Addressee</label>
    <type>Text</type>
</CustomField>