force-app/main/default/objects/Account/fields/Global_Banking_Officer__c.field-meta.xml
<CustomField>
    <fullName>Global_Banking_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Banking Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customersbeb8</relationshipName>
    <type>Lookup</type>
</CustomField>