force-app/main/default/objects/Account/fields/GPB_Wealth_Prospects__c.field-meta.xml
<CustomField>
    <fullName>GPB_Wealth_Prospects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPB Top Wealth Prospects</label>
    <type>Checkbox</type>
</CustomField>