force-app/main/default/objects/Account/fields/Has_Retail_Banker__c.field-meta.xml
<CustomField>
    <fullName>Has_Retail_Banker__c</fullName>
    <formula>IF(ISBLANK(Retail_Banker__c), 0, 1)</formula>
    <label># Retail Banker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>